2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_get_summary): Oops.
	If the number of messages in the folder is 0, don't fetch
	summaries 1 thru 0, just return an empty summary.
	(imap_copy_message_to): Fixed to use message UID and also send
	the source folder as an arg to camel_imap_command rather than NULL.
	(imap_move_message_to): Same.
	(imap_init): If SELECT is successful, we need to set the current
	folder to the one selected, this was causing problems with move/copy

2000-07-13  Dan Winship  <danw@helixcode.com>

	* camel-service.h: define a set of CAMEL_SERVICE_URL_ALLOW_* flags
	parallel to the _NEED_* flags, and make the _NEED_* flags imply
	the _ALLOW_* ones.

	* providers/imap/camel-imap-store.c (camel_imap_store_init): imap
	urls ALLOW_PATH

2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_get_summary): New
	and improved approach to fetching an entire folder summary
	that should be much much faster than the old way as it gets
	the entire folder summary in 1 shot rather than requesting
	message by message. As with the last update, this version
	also only fetches the minimum number of header fields.
	(imap_get_summary): Oops, forgot to free the temp 
	GPtrArray *headers

2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_get_summary): Don't
	fetch the entire RFC822 header, just fetch the fields we want.
	(imap_get_message_info): Same.

2000-07-13  Not Zed  <NotZed@HelixCode.com>

	* camel-mime-filter-basic.c (camel_mime_filter_basic_new_type):
	Reset filter on setup.
	(reset): When resetting qp encoding, set the state to -1, instead
	of 0.

	* camel-mime-utils.c (quoted_encode_step): Actually count the
	characters output sofar (it never counted any).  Bunch of other
	fixes.
	(quoted_encode_close): Also flush out final character, if there's
	one.

2000-07-12  Jeffrey Stedfast  <fejj@helixcode.com>
